Fix #29067 - [PERF] Replace LinkedList by ArrayList; Remove ThreadLocal in PropertyFormat